--- a/cv.html
+++ b/cv.html
@@ -253,7 +253,7 @@
                   <form id="contact-form-menu" class="contact-form" action="https://formspree.io/f/mzbqwbol" method="POST">
                     <div class="contact-form--input contact-form--input-header-bg-scolor contact-form--marquee-container">
                       <div id="contact-form-menu" class="contact-form--marquee-container">
-                        <h3 id="contactFormMarqueeTitleTwo" class="uppercase">Message:/h3>
+                        <h3 id="contactFormMarqueeTitleTwo" class="uppercase">Message:</h3>
                       </div>
                     </div>
                     <div class="contact-form--input">
@@ -438,7 +438,7 @@
                   <div class="parallax--cv-sub-header--container top-base grid-row-1 md:pt-s md:border-top--one hide-on-desktop">
                     <div class="cv-title">
                       <span class="cv-header uppercase hide-on-mob line-height--caps">/</span>
-                      <h3 class="cv-header uppercase wfit md:text-l lg:text-2xl lgmm:text-2xl line-height--caps">Background</h3>
+                      <h3 class="cv-header uppercase wfit md:text-xl lg:text-2xl lgmm:text-2xl line-height--caps">Background</h3>
                     </div>
                   </div>
                   <div class="parallax--cv-experience--container md:pt-s pb-s pb-header-height hide-on-desktop">
@@ -726,7 +726,8 @@
                     <li class="footer--info-li-color">© 2023 CEDAUX. All rights reserved.</li>
                   </ul>
                 </div>
-                <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop">
+                <!-- <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop"> -->
+                <a id="formTriggerThree" class="cursor-pointer hide-on-desktop">
                   <ul class="cursor-pointer">
                     <li class="footer--info-li-color uppercase">Contact</li>
                     <li class="footer--info-link-color">chris@chrisedwardsdesign.com</li>
