--- a/animation.html
+++ b/animation.html
@@ -428,7 +428,7 @@
 
                 <!-- intro text container -->
                 <div class="sticky top-base grid grid-auto-cols--minmax gap-one align-base width-100 height-fit md:grid-col-1-9 lg:grid-col-1-9 lgbgb:grid-col-1-3 md:pt-s lg:pt-s lgbg:pt-none md:border-top--one lg:border-top--one lgbg:border-top--none">
-                  <div class="span-text-flex--inline-start line-height--standard-caps uppercase lg:grid-col-1-3">
+                  <div class="span-text-flex--inline-start line-height--standard-caps uppercase lg:g2rid-col-1-3">
                     <span class="">
                       <h3 class="line-height--standard-caps md:text-xl lg:text-2xl lgmm:text-2xl">Animation</h3>
                     </span>
@@ -460,8 +460,8 @@
                   <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-3 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base">
                     <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
                       <video class="video video-content lg:aspect-ratio-16-9 md:aspect-ratio-16-9 cursor-pointer" loop autoplay muted playsinline>
-                        <source class="hero-video--main" src="assets/video/GFN_BLACK-FRIDAY_FULL-SIZE-WEBPAGE_SHOPIFY.mp4" type="video/mp4">
-                        <source class="hero-video--main" src="assets/video/GFN_BLACK-FRIDAY_FULL-SIZE-WEBPAGE_SHOPIFY.webm" type="video/webm">
+                        <source class="hero-video--main" src="assets/video/GFN_BLACK-FRIDAY_FULL-SIZE-WEBPAGE_SHOPIFY-small.mp4" type="video/mp4">
+                        <source class="hero-video--main" src="assets/video/GFN_BLACK-FRIDAY_FULL-SIZE-WEBPAGE_SHOPIFY-small.webm" type="video/webm">
                       </video>
                       <img class="thumbnail video-hero-thumbnail lg:aspect-ratio-16-9 md:aspect-ratio-16-9 cursor-pointer" src="assets/images/GFN_BLACK-FRIDAY_FULL-SIZE-WEBPAGE_SHOPIFY.jpg" alt="Video Thumbnail" loading="lazy">
                       <div class="play-button play-button--color-alt uppercase">
@@ -493,7 +493,7 @@
 
                   <!-- video 2 -->
                   <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem mdta:pt-s grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-3-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base">
-                    <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                    <div class="container--video grid-col-1-3 grid-row-1" data-video="2">
                       <video class="video video-content lg:aspect-ratio-16-9 md:aspect-ratio-16-9 cursor-pointer" loop autoplay muted playsinline>
                         <source class="hero-video--main" src="assets/video/gfn--animation-video--technologic-logo-ident-2.mp4" type="video/mp4">
                         <source class="hero-video--main" src="assets/video/gfn--animation-video--technologic-logo-ident-2.webm" type="video/webm">
@@ -530,7 +530,7 @@
                   <div class="lgm:height-100vh parallax--img--container pb-0 md:grid-col-1-5 lg:grid-col-1-5 md:row-gap-none lg:mb-minus-s mdt:relative lg:pb-s">
                     <!-- video 1 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-3 lg:grid-col-1-3 md:pt-s md:top-0 lg:pt-s lg:top-0">
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="3">
                         <video class="video video-content lg:aspect-ratio-9-16 md:aspect-ratio-9-16 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--technologic-VIP-1.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--technologic-VIP-1.webm" type="video/webm">
@@ -580,7 +580,7 @@
                     <!-- video 2 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-3-5 lg:grid-col-3-5 md:pt-s md:top-0 lg:pt-s lg:top-0">
 
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="4">
                         <video class="video video-content lg:aspect-ratio-9-16 md:aspect-ratio-9-16 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--technologic-garage-1.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--technologic-garage-1.webm" type="video/webm">
@@ -630,7 +630,7 @@
 
                     <!-- video 3 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one mdt:grid-col-1-5 lgt:grid-col-5-7 md:pt-s md:top-0 lg:pt-s lg:top-0 mb:pb-0">
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="5">
                         <video class="video video-content lg:aspect-ratio-9-16 md:aspect-ratio-9-16 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--solar-countdown.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--solar-countdown.webm" type="video/webm">
@@ -771,7 +771,7 @@
                   <div class="lgbt:height-100vh lgbgb:height-fit parallax--img--container pb-0 md:grid-col-1-5 lg:grid-col-1-5 md:row-gap-none lg:mb-minus-s lg:pb-s mdt:relative">
                     <!-- video 1 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-3 md:pt-s md:top-0 lg:pt-s lg:top-0">
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="6">
                         <video class="video video-content lg:aspect-ratio-1-1 md:aspect-ratio-1-1 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--rewards-become-a-member-5.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--rewards-become-a-member-5.webm" type="video/webm">
@@ -807,7 +807,7 @@
                     <!-- video 2 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-3-5 md:pt-s md:top-0 lg:pt-s lg:top-0">
 
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="7">
                         <video class="video video-content lg:aspect-ratio-1-1 md:aspect-ratio-1-1 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--ultraviolet-5.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--ultraviolet-5.webm" type="video/webm">
@@ -846,7 +846,7 @@
                   <div class="parallax--img--container pb-0 md:grid-col-1-5 lg:grid-col-1-5 md:row-gap-none lg:mb-minus-s lg:pb-s mdt:relative">
                     <!-- video 1 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-3 md:pt-s md:top-0 lg:pt-s lg:top-0">
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="8">
                         <video class="video video-content lg:aspect-ratio-16-9 md:aspect-ratio-16-9 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/BLACK_FIRDAY_MOCK_BLACK_2.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/BLACK_FIRDAY_MOCK_BLACK_2.webm" type="video/webm">
@@ -882,7 +882,7 @@
                     <!-- video 2 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-3-5 md:pt-s md:top-0 lg:pt-s lg:top-0">
 
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="9">
                         <video class="video video-content lg:aspect-ratio-16-9 md:aspect-ratio-16-9 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/BLACK_FIRDAY_MOCK_BLACK.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/BLACK_FIRDAY_MOCK_BLACK.webm" type="video/webm">
@@ -921,7 +921,7 @@
                   <div class="parallax--img--container pb-0 md:grid-col-1-5 lg:grid-col-1-5 md:row-gap-none lg:mb-minus-s lg:pb-s md:relative">
                     <!-- video 1 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-3 lg:grid-col-1-3 md:pt-s md:top-0 lg:pt-s lg:top-0">
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="10">
                         <video class="video video-content lg:aspect-ratio-1-1 md:aspect-ratio-1-1 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/gfn-processing--sale.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/gfn-processing--sale.webm" type="video/webm">
@@ -971,7 +971,7 @@
                     <!-- video 2 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-3-5 lg:grid-col-3-5 md:pt-s lg:pt-s md:top-0 lg:pt-s lg:top-0">
 
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="11">
                         <video class="video video-content lg:aspect-ratio-1-1 md:aspect-ratio-1-1 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/gfn-summer-20--2.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/gfn-summer-20--2.webm" type="video/webm">
@@ -1021,7 +1021,7 @@
 
                     <!-- video 3 - full width mobile -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-5-7 md:pt-s md:top-0 lg:pt-s lg:top-0 mb:pb-0">
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="12">
                         <video class="video video-content lg:aspect-ratio-1-1 md:aspect-ratio-1-1 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/gfn-ride-the-lightening.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/gfn-ride-the-lightening.webm" type="video/webm">
@@ -1059,7 +1059,7 @@
                   <div class="lgbt:height-100vh lgbgb:height-fit parallax--img--container pb-0 md:grid-col-1-5 lg:grid-col-1-5 md:row-gap-none lg:mb-minus-s lg:pb-s mdt:relative">
                     <!-- video 1 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-3 md:pt-s md:top-0 lg:pt-s lg:top-0">
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="13">
                         <video class="video video-content lg:aspect-ratio-1-1 md:aspect-ratio-1-1 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--sale-promo-1--2020-2.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--sale-promo-1--2020-2.webm" type="video/webm">
@@ -1095,7 +1095,7 @@
                     <!-- video 2 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-3-5 md:pt-s md:top-0 lg:pt-s lg:top-0">
 
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="14">
                         <video class="video video-content lg:aspect-ratio-1-1 md:aspect-ratio-1-1 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/pre-london--animation-video-3d-2.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/pre-london--animation-video-3d-2.webm" type="video/webm">
@@ -1213,7 +1213,7 @@
 
                   <!-- one column video -->
                   <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lg:mb-minus-s lg:pb-s none">
-                    <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                    <div class="container--video grid-col-1-3 grid-row-1" data-video="15">
                       <video class="video video-content lg:aspect-ratio-16-9 md:aspect-ratio-16-9 cursor-pointer" loop autoplay muted playsinline>
                         <source class="hero-video--main" src="assets/video/GFN_BLACK-FRIDAY_FULL-SIZE-WEBPAGE_SHOPIFY.mp4" type="video/mp4">
                         <source class="hero-video--main" src="assets/video/test-video.webm" type="video/webm">
@@ -1250,7 +1250,7 @@
                   <div class="parallax--img--container pb-0 md:grid-col-1-5 lg:grid-col-1-5 md:row-gap-none">
                     <!-- video 1 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-3 lg:grid-col-1-3 md:pt-s md:top-0 lg:pt-s lg:top-0 lg:pb-0">
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="16">
                         <video class="video video-content lg:aspect-ratio-1-1 md:aspect-ratio-1-1 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--solar.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/gfn--animation-video--solar.webm" type="video/webm">
@@ -1301,7 +1301,7 @@
                     <!-- video 2 -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-3-5 lg:grid-col-3-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lg:pb-0">
 
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="17">
                         <video class="video video-content lg:aspect-ratio-1-1 md:aspect-ratio-1-1 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/heat-2_video-exprt.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/heat-2_video-exprt.webm" type="video/webm">
@@ -1351,7 +1351,7 @@
 
                     <!-- video 3 - full width mobile -->
                     <div class="height-fit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-5-7 md:pt-s md:top-0 lg:pt-s lg:top-0 lg:pb-0 mb:pb-0">
-                      <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
+                      <div class="container--video grid-col-1-3 grid-row-1" data-video="18">
                         <video class="video video-content lg:aspect-ratio-1-1 md:aspect-ratio-1-1 cursor-pointer" loop autoplay muted playsinline>
                           <source class="hero-video--main" src="assets/video/WS_NEWSLETTER_1.mp4" type="video/mp4">
                           <source class="hero-video--main" src="assets/video/WS_NEWSLETTER_1.webm" type="video/webm">
@@ -1399,7 +1399,9 @@
                     <li class="footer--info-li-color">© 2023 CEDAUX</li>
                   </ul>
                 </div>
-                <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop">
+                <!-- <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop"> -->
+                <a id="formTriggerThree" class="cursor-pointer hide-on-desktop">
+
                   <ul class="cursor-pointer">
                     <li class="footer--info-li-color uppercase">Contact</li>
                     <li class="footer--info-link-color">chris@chrisedwardsdesign.com</li>
