--- a/design.html
+++ b/design.html
@@ -266,7 +266,7 @@
                     </div>
                     <div class="contact-form--input contact-form--input--message-container">
                       <textarea id="message" class="contact-form--input-placeholder-color" name="message" placeholder="Send me a message*" user-scalable="no" required=""></textarea>
-                      <label for="message" class="contact-form--input--message">MESSAGE</label>
+                      <label for="message" class="contact-form--input--message">MESSAGE:</label>
                     </div>
                     <div class="contact-form--input">
                       <button id="contact-form--submit-two" user-scalable="no" type="submit">SUBMIT</button>
@@ -429,7 +429,7 @@
                 <div class="sticky top-base grid grid-auto-cols--minmax gap-one align-base width-100 height-fit md:grid-col-1-9 lg:grid-col-1-9 lgbgb:grid-col-1-3 md:pt-s lg:pt-s lgbg:pt-none md:border-top--one lg:border-top--one lgbg:border-top--none">
                   <div class="span-text-flex--inline-start line-height--standard-caps uppercase lg:grid-col-1-3">
                     <span class="">
-                      <h3 class="line-height--standard-caps md:text-xl lg:text-2xl lgmm:text-2xl">UX / CODE</h3>
+                      <h3 class="line-height--standard-caps md:text-xl lg:text-2xl lgmm:text-2xl">DESIGN</h3>
                     </span>
                   </div>
                   <p class="collection-info md:text-m lg:text-m lgbt:text-l mdta:grid-col-1-3 lgta:grid-col-3-5 lgbg:grid-col-1-3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
@@ -864,7 +864,8 @@
                     <li class="footer--info-li-color">© 2023 CEDAUX</li>
                   </ul>
                 </div>
-                <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop">
+                <!-- <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop"> -->
+                <a id="formTriggerThree" class="cursor-pointer hide-on-desktop">
                   <ul class="cursor-pointer">
                     <li class="footer--info-li-color uppercase">Contact</li>
                     <li class="footer--info-link-color">chris@chrisedwardsdesign.com</li>
