--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                   <form id="contact-form-menu" class="contact-form" action="https://formspree.io/f/mzbqwbol" method="POST">
                     <div class="contact-form--input contact-form--input-header-bg-scolor contact-form--marquee-container">
                       <div id="contact-form-menu" class="contact-form--marquee-container">
-                        <h3 id="contactFormMarqueeTitleTwo" class="italic">Message</h3>
+                        <h3 id="contactFormMarqueeTitleTwo" class="uppercase">Message:</h3>
                       </div>
                     </div>
                     <div class="contact-form--input">
@@ -448,9 +448,9 @@
                       </button>
                     </div>
                     <ul class="splide__list">
-                      <li class="splide__slide" data-splide-html-video="assets/video/test-video.mp4">
+                      <li class="splide__slide" data-splide-html-video="assets/video/cdev-hero-3.mp4">
                         <div class="splide__slide__container">
-                          <img src="assets/images/text.jpg">
+                          <img src="assets/images/cdev-hero-2.jpg">
                         </div>
                         <a href="design.html" title="Link to design collection page">
                           <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -494,7 +494,7 @@
 
               </div>
 
-              <div id="sectionGrapahic" class="graphic--container lg:grid-row-1 md:pb-s">
+              <div id="sectionGraphic" class="graphic--container lg:grid-row-1 md:pb-s">
                 <!-- desktop about -->
                 <div class="grid gap-one position-relative height-fit align-self-start lg:pt-header-height g:pt-s z-index-2 lg:grid-row-1 mdt:grid-col-1-5 lgt:grid-col-1-3 lgbg:grid-col-1-2 hide-on-mob--important">
                   <p class="intro-text-desktop lg:grid-col-1-2 grid-row-1 lg:text-l lgt:text-l lgb:text-l pointer-events-visible">
@@ -521,7 +521,7 @@
                   </a>
                 </div>
                 <!-- end of desktop about -->
-                <div id="logotype--svg-container" class="logotype--svg-container md:pt-0 height-fit lg:align-self-start lg:grid-col-1-5 lgta:grid-col-2-5 lgm:grid-col-2-5 lg:grid-row-2 lgbg:grid-row-1 lgbg:pt-header-height lgmm:pb-header-height-minus-1rem lgm:mt-negative-header-height lgbg:mb-none">
+                <div id="logotype--svg-container" class="logotype--svg-container md:pt-0 md:pb-s height-fit lg:align-self-start lg:grid-col-1-5 lgta:grid-col-2-5 lgm:grid-col-2-5 lg:grid-row-2 lgbg:grid-row-1 lgbg:pt-header-height lgmm:pb-header-height-minus-1rem lgm:mt-negative-header-height lgbg:mb-none">
                   <div class="logotype--svg-inner">
                     <!-- mobile about -->
                     <div class="intro-text--container-mob">
@@ -619,7 +619,8 @@
                     <li class="footer--info-li-color">© 2023 CEDAUX</li>
                   </ul>
                 </div>
-                <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop">
+                <!-- <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop"> -->
+                <a id="formTriggerThree" class="cursor-pointer hide-on-desktop">
                   <ul class="cursor-pointer">
                     <li class="footer--info-li-color uppercase">Contact</li>
                     <li class="footer--info-link-color">chris@chrisedwardsdesign.com</li>
