--- a/cv.html
+++ b/cv.html
@@ -8,11 +8,12 @@
       <meta http-equiv='expires' content='0'> 
       <meta http-equiv='pragma' content='no-cache'>
       <title>Chris Edwards Design</title>
-      <meta name="description" content="Digital Design / Multi-disciplinary Design / Graphic Design / UX / Animation / Junior Web Dev. Check out my portfolio.">
+      <meta name="description" content="Digital Design / Multi-disciplinary Design / Graphic Design / UI / Animation / Junior Web Dev. Check out my portfolio.">
       <link rel="canonical" href="https://www.chrisedwardsdesign.com/">
       <meta property="og:locale" content="en_UK">
       <meta property="og:type" content="website">
       <meta property="og:title" content="Chris Edwards - Multi-disciplinary Designer">
+      <link rel="icon" type="image/png" href="assets/images/c-3.png">
       <link rel="stylesheet" href="styles/styles.css">
       <link rel="stylesheet" href="styles/dark-theme.css" id="theme-style">
       <link rel="stylesheet" href="https://use.typekit.net/wod0krg.css">
@@ -38,7 +39,7 @@
     <header id="header--container">
       <!-- desktop menu -->
       <!-- nav logo -->
-      <nav id="navBar" aria-label="Desktop navigation menu" class="container--nav lg:bg-transparent--important md:grid-auto-cols--minmax md:grid-cols--unset lgbgb:grid-auto-cols--minmax lgbgb:grid-cols--unset">
+      <nav id="navBar" aria-label="Desktop navigation menu" class="container--nav md:grid-auto-cols--minmax md:grid-cols--unset lgbgb:grid-auto-cols--minmax lgbgb:grid-cols--unset">
         <div id="aboutTriggerTabletLogoHome" class="nav--logo-container cursor-pointer lgbg:grid-col-1-3 grid-row-1">  
           <a class="nav--logotype-container" href="index.html" title="Homepage">
             <h1 class="nav--logotype">CHRIS EDWARDS DESIGN</h1>
@@ -58,8 +59,8 @@
             </a>
           </li>
           <li>
-            <a href="ux-code.html" title="Link to ux-code collection page">
-              <h2 class="nav--link cursor-pointer">UX / CODE</h2>
+            <a href="ui-code.html" title="Link to ux-code collection page">
+              <h2 class="nav--link cursor-pointer">UI / CODE</h2>
             </a>
           </li>
         </ul>
@@ -143,7 +144,7 @@
               <div class="accordion-header">
                 <div class="accordion-content display-flex flex-column flex-start justify-content-start width-100 overflow-hiden max-height--header-height transition-max-height-02">
                   <div class="mobile-menu--cv">
-                    <a href="cv.html" class="border-top--one-dashed--grey" title="Link to cv page">
+                    <a href="cv.html" class="border-top--none-important" title="Link to cv page">
                       <span class="uppercase">CV / RÉSUMÉ</span>
                       <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
@@ -195,13 +196,13 @@
                     </svg>
                   </span>
                 </a>
-                <a href="ux-code.html" title="UX / Code" class="uppercase">
+                <a href="ui-code.html" title="UI / Code" class="uppercase">
                   <span>
                     <div class="menu--subheader">
                       <svg class="menu--svg-box none" width="18" height="18" viewBox="0 0 18 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                         <rect x="1.10808" y="0.856018" width="16" height="16" stroke="inherit"/>
                       </svg>                      
-                      <h3>UX / CODE</h3>
+                      <h3>UI / CODE</h3>
                     </div>
                   </span>
                   <span>
@@ -227,7 +228,7 @@
                 <div class="mobile-menu--cv">
                   <p class="border-bottom-unset">Say hello, let's work together.</p>
                   <p class="">
-                    Manchester-based multi-disciplinary designer specialising in web design, animation and UX. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio.
+                    Manchester-based multi-disciplinary designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio.
                   </p>
                   <a href="cv.html" class="border-top--one-dashed--grey" title="Link to cv page">
                     <span class="uppercase">CV / RÉSUMÉ</span>
@@ -298,7 +299,7 @@
         <div class="contact-form--intro-container">
           <div class="contact-form--intro--text-container">
             <p class="contact-form--intro--p">Say hello, let's work together.</p>
-            <p class="contact-form--intro--p">Manchester-based multi-disciplinary designer specialising in web design, animation and UX. Check out my portfolio.</p>
+            <p class="contact-form--intro--p">Manchester-based multi-disciplinary designer specialising in web design, animation and UI. Check out my portfolio.</p>
           </div>
           <a href="cv.html" class="contact-form--intro--list-container border-bottom--one" title="Link to CV page">
             <div class="contact-form--intro--list">
@@ -318,11 +319,11 @@
               <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
             </svg>
           </a>
-          <a id="linkedInLinkContactMenu" href="https://www.linkedin.com/in/chris-edwards-b97488276" class="contact-form--intro--list-container" title="linkedIn Page External link to page" target="_blank">
+          <a id="linkedInLinkContactMenu" href="https://www.linkedin.com/in/chrisedwardsdesign" class="contact-form--intro--list-container" title="linkedIn Page External link to page" target="_blank">
             <div class="contact-form--intro--list">
               <span class="uppercase">LINKEDIN</span>
               <span class="">/</span>
-              <span class="">chris-edwards-b97488276</span>
+              <span class="">chrisedwardsdesign</span>
             </div>
             <svg class="menu--svg-arrow-right" width="10" height="18" viewBox="0 0 10 18" fill="inherit" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.68521 16.6553L1.02513 8.99521L8.68522 1.33513" stroke="inherit" stroke-miterlimit="10"></path>
@@ -389,9 +390,9 @@
                 <div class="content--text-desktop-pages grid-auto-cols--minmax md:pt-s lg:pt-s lgbg:pt-none md:border-top--one lg:border-top--one lgbg:border-top--none">
                   <h3 class="line-height--standard-caps md:text-xl lg:text-2xl lgmm:text-2xl mdta:grid-col-1-2 lgta:grid-col-1-3 md:grid-row-1 lg:grid-row-1 md:text-m uppercase">Background</h3>
                   <p class="intro-text-desktop mdta:grid-col-2-3 lgta:grid-col-3-5 mdta:grid-row-1 lgta:grid-row-1 lgta:grid-row-1 md:text-m lg:text-m lgbt:text-l">
-                    Manchester-based digital designer specialising in web design, animation and UX. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio.
+                    Manchester-based digital designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender.
                   </p>
-                  <a id="cvLink" href="assets/Chris-Edwards-CV-3.pdf" class="link--cv-page link--main mdta:grid-col-2-3 lgta:grid-col-3-5 mdta:grid-row-2 lgta:grid-row-2 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
+                  <a href="assets/Chris-Edwards-CV-3.pdf" class="link--cv-page link--main mdta:grid-col-2-3 lgta:grid-col-3-5 mdta:grid-row-2 lgta:grid-row-2 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
                     <svg class="cv-link--hover contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                       <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -408,9 +409,9 @@
                   <div class="content--text-desktop-pages lg:pt-s lg:pt-none lg:border-top--one">
                     <h3 class="line-height--standard-caps md:text-xl lg:text-2xl lgmm:text-2xl lg:grid-col-1-2 lgmm:grid-col-1-3 lgbgb:grid-col-1-2 md:text-m grid-row-1 uppercase">Background</h3>
                     <p class="intro-text-desktop lg:grid-col-1-2 lgmm:grid-col-3-5 lgbg:grid-col-3-5 lgbgb:grid-col-3-5 md:text-m lg:text-m lgbt:text-l">
-                      Manchester-based digital designer specialising in web design, animation and UX. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio.
+                      Manchester-based digital designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender.
                     </p>
-                    <a id="cvLink" href="assets/Chris-Edwards-CV-3.pdf" class="link--cv-page link--main lg:grid-col-1-2 lgmm:grid-col-3-5 lgbgb:grid-col-3-5 lgbg:grid-col-3-5 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
+                    <a href="assets/Chris-Edwards-CV-3.pdf" class="link--cv-page link--main lg:grid-col-1-2 lgmm:grid-col-3-5 lgbgb:grid-col-3-5 lgbg:grid-col-3-5 uppercase mt-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
                     <svg class="cv-link--hover svg--hover contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                       <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -444,8 +445,8 @@
                   <div class="parallax--cv-experience--container md:pt-s pb-s pb-header-height hide-on-desktop">
                     <div class="cv-experience--container">
                       <div class="cv-bulleted-list">
-                        <p class="cv-text-background">Manchester-based digital designer specialising in web design, animation and UX. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender. Check out my portfolio.</p>
-                        <a id="cvLink" href="assets/Chris-Edwards-CV-3.pdf" class="link--cv-page-mob link--main--cv link-cv-mobile align-self-start uppercase mt-s-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half" target="_blank">
+                        <p class="cv-text-background">Manchester-based digital designer specialising in web design, animation and UI. With a good foundation in HTML, CSS, JavaScript and Shopify Liquid as well as some experience in 3D modeling packages including Cinema 4D and Blender.</p>
+                        <a href="assets/Chris-Edwards-CV-3.pdf" class="link--cv-page-mob link--main--cv link-cv-mobile align-self-start uppercase mt-s-xs pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half" target="_blank">
                           <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
                             <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
@@ -688,7 +689,57 @@
                         </div>
                       </div>
                       <ul class="cv-tag-list overflow-unset">
-                        <li class="cv-bulleted-list--li-span md:text-s lg:text-m lgbt:text-l line-height--caps"><span>HTML</span><span>·</span><span>CSS</span><span>·</span><span>Javascript</span><span>·</span><span>Shopify Liquid</span></li>
+                        <li class="cv-bulleted-list--li-span md:text-s lg:text-m lgbt:text-l line-height--caps">
+                          <span>HTML</span>
+                          <span>·</span>
+                          <span>CSS</span>
+                          <span>·</span>
+                          <span>Javascript</span>
+                          <span>·</span>
+                          <span>Shopify Liquid</span>
+                        </li>
+                      </ul>
+                      <div class="cv-title--container">
+                        <div class="cv-date">
+                          <h3 class="text--grey font-weight-400 wfit line-height--caps">Certificates:</h3>
+                        </div>
+                      </div>
+                      <ul class="cv-tag-list overflow-unset">
+                        <li class="cv-bulleted-list--li-span md:text-s lg:text-m lgbt:text-l line-height--caps gap-s">
+                          <span>
+                            <a href="assets/chrisedwards-gdac's profile _ Codecademy-HMTL.pdf" title="Link to HTML certficiate download" class="link--certificate uppercase pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
+                              <svg class="cv-link--hover contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
+                                <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
+                              </svg>
+                              <p>HTML</p>
+                            </a>
+                          </span>
+                          <span>
+                            <a href="assets/chrisedwards-gdac's profile _ Codecademy-CSS.pdf" title="Link to CSS certficiate download" class="link--certificate uppercase pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
+                              <svg class="cv-link--hover contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
+                                <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
+                              </svg>
+                              <p>CSS</p>
+                            </a>
+                          </span>
+                          <span>
+                            <a href="assets/chrisedwards-gdac's profile _ Codecademy-Javascript.pdf" title="Link to Javascript certficiate download" class="link--certificate uppercase pt-xs pr-s pb-xs pl-s border-outline--one-solid border-radius-half mb-component-border-width" target="_blank">
+                              <svg class="cv-link--hover contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
+                                <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
+                              </svg>
+                              <p>Javascript</p>
+                            </a>
+                          </span>
+                          
+                          <!-- <span><a href="assets/chrisedwards-gdac's profile _ Codecademy-HMTL.pdf" class="link--cv" title="Link to HTML certficiate download" target="_blank">HTML</a></span>
+                          <span>·</span>
+                          <span><a href="assets/chrisedwards-gdac's profile _ Codecademy-CSS.pdf" class="link--cv" title="Link to CSS certficiate download" target="_blank">CSS</a></span>
+                          <span>·</span>
+                          <span><a href="assets/chrisedwards-gdac's profile _ Codecademy-Javascript.pdf" class="link--cv" title="Link to Javascript certficiate download" target="_blank">Javascript</a></span> -->
+                        </li>
                       </ul>
                     </div>
                   </div>
@@ -723,7 +774,7 @@
               <div class="footer--col">
                 <div class="cursor-pointer hide-on-mob">
                   <ul class="cursor-none">
-                    <li class="footer--info-li-color">© 2023 CEDAUX. All rights reserved.</li>
+                    <li class="footer--info-li-color">© 2023 CEDAUI. All rights reserved.</li>
                   </ul>
                 </div>
                 <!-- <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop"> -->
@@ -748,15 +799,15 @@
                 </a>
               </div>
               <div class="footer--col lgbgb:grid-col-3-5">
-                <a id="linkedInLinkFooter" href="https://www.linkedin.com/in/chris-edwards-b97488276" class="cursor-pointer hide-on-mob" title="LinkedIn External Link" target="_blank">
+                <a id="linkedInLinkFooter" href="https://www.linkedin.com/in/chrisedwardsdesign" class="cursor-pointer hide-on-mob" title="LinkedIn External Link" target="_blank">
                   <ul>
                     <li class="footer--info-li-color uppercase">LINKEDIN</li>
                   </ul>
                 </a>
-                <a id="linkedInLinkFooter" href="https://www.linkedin.com/in/chris-edwards-b97488276" class="cursor-pointer hide-on-desktop" title="LinkedIn External Link" target="_blank">
+                <a id="linkedInLinkFooter" href="https://www.linkedin.com/in/chrisedwardsdesign" class="cursor-pointer hide-on-desktop" title="LinkedIn External Link" target="_blank">
                   <ul>
                     <li class="footer--info-li-color uppercase">LINKEDIN</li>
-                    <li class="footer--info-link-color">/chris-edwards-b97488276</li>
+                    <li class="footer--info-link-color">/chrisedwardsdesign</li>
                   </ul>
                 </a>
               </div>
