--- a/cv.html
+++ b/cv.html
@@ -774,7 +774,7 @@
               <div class="footer--col">
                 <div class="cursor-pointer hide-on-mob">
                   <ul class="cursor-none">
-                    <li class="footer--info-li-color">© 2023 CEDAUI. All rights reserved.</li>
+                    <li class="footer--info-li-color">© 2023 CEDAUI</li>
                   </ul>
                 </div>
                 <!-- <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop"> -->
@@ -799,7 +799,7 @@
                 </a>
               </div>
               <div class="footer--col lgbgb:grid-col-3-5">
-                <a id="linkedInLinkFooter" href="https://www.linkedin.com/in/chrisedwardsdesign" class="cursor-pointer hide-on-mob" title="LinkedIn External Link" target="_blank">
+                <a id="linkedInLinkFooter" href="https://www.linkedin.com/in/chrisedwardsdesign" class="cursor-pointer hide-on-mob hide-on-desktop" title="LinkedIn External Link" target="_blank">
                   <ul>
                     <li class="footer--info-li-color uppercase">LINKEDIN</li>
                   </ul>
