--- a/ui-code.html
+++ b/ui-code.html
@@ -511,10 +511,10 @@
                   </div>
 
                   <!-- test section scroll 1 -->
-                  <div class="md:relative hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
 
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m overflow-hiden">
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden">
                         <div class="custom--ui-mockup border-top-right-left-s">
                           <div class="custom--ui-mockup--dot--container">
                             <span></span><span></span><span></span>
@@ -550,7 +550,7 @@
                         </div>
                       </div>
 
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden">
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden hide-on-mob">
                         <div class="custom--ui-mockup border-top-right-left-s">
                           <div class="custom--ui-mockup--dot--container">
                             <span></span><span></span><span></span>
@@ -606,10 +606,10 @@
                   </div>
 
                   <!-- test section scroll 2 -->
-                  <div class="md:relative hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
 
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m overflow-hiden" data-video="4">
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden" data-video="4">
                         <div class="custom--ui-mockup border-top-right-left-s">
                           <div class="custom--ui-mockup--dot--container">
                             <span></span><span></span><span></span>
@@ -645,7 +645,7 @@
                         </div>
                       </div>
 
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden" data-video="4">
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden hide-on-mob">
                         <div class="custom--ui-mockup border-top-right-left-s">
                           <div class="custom--ui-mockup--dot--container">
                             <span></span><span></span><span></span>
@@ -701,10 +701,10 @@
                   </div>
 
                   <!-- test section scroll 3 -->
-                  <div class="md:relative hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
 
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m overflow-hiden">
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden">
                         <div class="custom--ui-mockup border-top-right-left-s">
                           <div class="custom--ui-mockup--dot--container">
                             <span></span><span></span><span></span>
@@ -740,7 +740,7 @@
                         </div>
                       </div>
 
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden">
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden hide-on-mob">
                         <div class="custom--ui-mockup border-top-right-left-s">
                           <div class="custom--ui-mockup--dot--container">
                             <span></span><span></span><span></span>
@@ -795,10 +795,10 @@
                   </div>
 
                   <!-- test section scroll 4 -->
-                  <div class="md:relative hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
 
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m overflow-hiden">
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden">
                         <div class="custom--ui-mockup border-top-right-left-s">
                           <div class="custom--ui-mockup--dot--container">
                             <span></span><span></span><span></span>
@@ -834,7 +834,7 @@
                         </div>
                       </div>
 
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden">
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden hide-on-mob">
                         <div class="custom--ui-mockup border-top-right-left-s">
                           <div class="custom--ui-mockup--dot--container">
                             <span></span><span></span><span></span>
@@ -889,10 +889,10 @@
                   </div>
 
                   <!-- test section scroll 5 -->
-                  <div class="md:relative hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
 
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m overflow-hiden">
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden">
                         <div class="custom--ui-mockup border-top-right-left-s">
                           <div class="custom--ui-mockup--dot--container">
                             <span></span><span></span><span></span>
@@ -928,7 +928,7 @@
                         </div>
                       </div>
 
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden">
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden hide-on-mob">
                         <div class="custom--ui-mockup border-top-right-left-s">
                           <div class="custom--ui-mockup--dot--container">
                             <span></span><span></span><span></span>
